# shito

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  db.rs  dice.rs  main.rs  models.rs
