[package]
name = "shito"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Shito"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
rand = "0.8"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
unicode-width = "0.1"
